# shortly

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2f5f05b2dc03_refresh_token.py  5236d244e3c2_initial_migration.py  ec836d7a9567_passwor_field_fix.py
shortly/: main.py
shortly/api/: endpoints.py  health.py
shortly/api/v1/: auth.py  deps.py  links.py  users.py
shortly/api/v1/Depends/: oauth.py  repo.py
shortly/core/: config.py  database.py  security.py
shortly/models/: __init__.py  base.py  link.py  user.py
shortly/repository/: base.py  link.py  user.py
shortly/schemas/: __init__.py  health.py  link.py  token.py  user.py
shortly/service/: link.py
tests/: conftest.py  test_security.py
tests/int/: test_auth.py  test_health.py  test_links.py  test_users.py
