[tool.poetry]
name = "shortly"
version = "0.1.0"
description = ""
authors = ["sny <127958265+kyofu95@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.12"
asyncpg = "^0.27.0"
uvicorn = "^0.22.0"
alembic = "^1.10.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "shortly",
]
testpaths = [
  "tests",
]

[tool.black]
line-length = 120